@@ -1,7 +1,13 @@
 WIAPASCAL CHANGE LOG
 ======================
 
-2024/10/11 First Settings Form code; Added PaperSizes (that does not works)
+2024/10/14 functions in WIA_PaperSizes unit to Calculate Values;
+           GetPaperSizeSet use Calculated Values; 
+           SetPaperSize use Calculated Pixel Values (WIA_IPS_XEXTENT, etc);
+           GetResolutions for List of Valid Values;
+           Get/Set Resolution;
+           Updated SettingForm and Demo 
+        11 First Settings Form code; Added PaperSizes (that does not works)
         10 Added WIA_Settings Form (empty)
            Renamed Demo as Tests and Added a real Demo 
         08 TWIADevice.GetProperty with Default and List of possible Values (Integer)
